--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,9 @@ github_username:  giannissc
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-tactile
+theme: minima
 # default is minima
+# jekyll-theme-tactile
 plugins:
   - jekyll-feed
 
