--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  giannissc
+future: true
+timezone: GB
 
 # Build settings
 markdown: kramdown
