--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ timezone: GB
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-tactile
 # default is minima
 # jekyll-theme-tactile
 plugins:
